src/objects/Test__c.object
<CustomObject>
    <fields>
        <fullName>CheckboxField5__c</fullName>
        <label>CheckboxField5</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyField5__c</fullName>
        <label>CurrencyField5</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeField6__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DateTime Help Text</inlineHelpText>
        <label>DateTimeField6</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTimeField7__c</fullName>
        <description>DateTime Field Description</description>
        <inlineHelpText>DateTime Help Text</inlineHelpText>
        <label>DateTimeField7</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailField5__c</fullName>
        <label>EmailField5</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailField7__c</fullName>
        <description>Email Field Description</description>
        <inlineHelpText>Email Help Text</inlineHelpText>
        <label>EmailField7</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enter_date_of_birth_in_years__c</fullName>
        <description>Date Field Description</description>
        <inlineHelpText>Date Help Text</inlineHelpText>
        <label>Enter date of birth(in years)</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HtmlField5__c</fullName>
        <description>Testing Rich Text Field Description</description>
        <inlineHelpText>Testing Rich Text Field Help Text</inlineHelpText>
        <label>HtmlField5</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_th1234567890is_true__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>Is this$%^&amp;*true</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_123true__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>Is this$%^&amp;*true</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationField6__c</fullName>
        <description>Geolocation Field Description</description>
        <inlineHelpText>Geolocation Help Text</inlineHelpText>
        <label>LocationField6</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LocationField7__c</fullName>
        <description>Geolocation Field Description</description>
        <inlineHelpText>Geolocation Help Text</inlineHelpText>
        <label>LocationField7</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LongTextAreaField5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LongTextAreaField5</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextAreaField6__c</fullName>
        <description>Long Text Area Description</description>
        <inlineHelpText>Testing Long Text Area Help Text</inlineHelpText>
        <label>LongTextAreaField6</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextAreaField7__c</fullName>
        <description>Long Text Area Description</description>
        <inlineHelpText>Testing Long Text Area Help Text</inlineHelpText>
        <label>LongTextAreaField7</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MultiselectPicklistField7__c</fullName>
        <description>Text Multi Picklist Description</description>
        <inlineHelpText>Mutlipicklist Help Text</inlineHelpText>
        <label>MultiselectPicklistField7</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>pick1</fullName><default>false</default><label>pick1</label></value>
                <value><fullName>pick2</fullName><default>false</default><label>pick2</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PercentField6__c</fullName>
        <inlineHelpText>Percent Help Text</inlineHelpText>
        <label>PercentField6</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentField7__c</fullName>
        <description>Percent Field Description</description>
        <inlineHelpText>Percent Help Text</inlineHelpText>
        <label>PercentField7</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PhoneField6__c</fullName>
        <label>PhoneField6</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>1</fullName><default>false</default><label>1</label></value>
                <value><fullName>2</fullName><default>false</default><label>2</label></value>
                <value><fullName>3</fullName><default>false</default><label>3</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhoneField7__c</fullName>
        <description>Phone Field Description</description>
        <inlineHelpText>Phone Help Text</inlineHelpText>
        <label>PhoneField7</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PicklistField5__c</fullName>
        <inlineHelpText>Picklist Help Text</inlineHelpText>
        <label>PicklistField5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>pick1</fullName><default>false</default><label>pick1</label></value>
                <value><fullName>pick2</fullName><default>false</default><label>pick2</label></value>
                <value><fullName>pick3</fullName><default>false</default><label>pick3</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistField6__c</fullName>
        <inlineHelpText>Picklist Help Text</inlineHelpText>
        <label>PicklistField6</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>pick1</fullName><default>false</default><label>pick1</label></value>
                <value><fullName>pick2</fullName><default>false</default><label>pick2</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistField7__c</fullName>
        <inlineHelpText>Picklist Help Text</inlineHelpText>
        <label>PicklistField7</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>pick1</fullName><default>false</default><label>pick1</label></value>
                <value><fullName>pick2</fullName><default>false</default><label>pick2</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <label>Test Field</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextAreaField5__c</fullName>
        <description>TextArea Field Description</description>
        <inlineHelpText>TextArea Help Text</inlineHelpText>
        <label>TextAreaField5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextAreaField6__c</fullName>
        <description>TextArea Field Description</description>
        <inlineHelpText>TextArea Help Text</inlineHelpText>
        <label>TextAreaField6</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextAreaField7__c</fullName>
        <description>TextArea Field Description</description>
        <inlineHelpText>TextArea Help Text</inlineHelpText>
        <label>TextAreaField7</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextField7__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>TextField7</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UrlField6__c</fullName>
        <label>UrlField6</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UrlField7__c</fullName>
        <description>Testing Url Field Description</description>
        <inlineHelpText>Testing Url Field Help Text</inlineHelpText>
        <label>UrlField7</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X11__c</fullName>
        <inlineHelpText>Email Help Text</inlineHelpText>
        <label>11</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>1</fullName><default>false</default><label>1</label></value>
                <value><fullName>2</fullName><default>false</default><label>2</label></value>
                <value><fullName>3</fullName><default>false</default><label>3</label></value>
                <value><fullName>4</fullName><default>false</default><label>4</label></value>
                <value><fullName>5</fullName><default>false</default><label>5</label></value>
                <value><fullName>6</fullName><default>false</default><label>6</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X22__c</fullName>
        <inlineHelpText>DateTime Help Text</inlineHelpText>
        <label>22</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>1</fullName><default>false</default><label>1</label></value>
                <value><fullName>2</fullName><default>false</default><label>2</label></value>
                <value><fullName>3</fullName><default>false</default><label>3</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_in_percent__c</fullName>
        <description>Percent Field Description</description>
        <inlineHelpText>Percent Help Text</inlineHelpText>
        <label>2 (in percent$</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X4__c</fullName>
        <description>Geolocation Field Description</description>
        <inlineHelpText>Geolocation Help Text</inlineHelpText>
        <label>4</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>meta1Test10__c</fullName>
        <description>Phone Field Description</description>
        <inlineHelpText>Phone Help Text</inlineHelpText>
        <label>meta1Test10</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>meta1Test12__c</fullName>
        <description>Text Multi Picklist Description</description>
        <inlineHelpText>Mutlipicklist Help Text</inlineHelpText>
        <label>meta1Test12</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>pick1</fullName><default>false</default><label>pick1</label></value>
                <value><fullName>pick2</fullName><default>false</default><label>pick2</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>meta1Test13__c</fullName>
        <description>TextArea Field Description</description>
        <inlineHelpText>TextArea Help Text</inlineHelpText>
        <label>meta1Test13</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>meta1_Test2__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>meta1_Test3__c</fullName>
        <description>Currency Field Description</description>
        <inlineHelpText>Currency Help Text</inlineHelpText>
        <label>meta1&amp;*Test3</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Test</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>